@@ -150,6 +150,15 @@ or would like to help out.
       </item>
     </news>
 
+    <contacts>
+      <person>
+        <realname>Murray Cumming</realname>
+      </person>
+      <person>
+        <realname>José Alburquerque</realname>
+      </person>
+    </contacts>
+
   </binding>
 
   <binding>
